@startuml

class com.frauas.exercisegenerator.documents.Category {
	{field} +id : String
	{field} +name : String
	{method}  {static} +builder () : com.frauas.exercisegenerator.documents.Category$CategoryBuilder
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.Course {
	{field} +id : String
	{field} +name : String
	{method}  {static} +builder () : com.frauas.exercisegenerator.documents.Course$CourseBuilder
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.Exercise {
	{field} +createdAt : java.time.LocalDateTime
	{field} +id : String
	{field} +isPublished : Boolean
	{field} +isUsed : Boolean
	{field} +note : String
	{field} +publishedAt : java.time.LocalDateTime
	{field} +shortDescription : String
	{field} +solutions : java.util.List
	{field} +texts : java.util.List
	{field} +title : String
	{field} +updatedAt : java.time.LocalDateTime
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.Image {
	{field} +content : String
	{field} +filepath : String
	{field} +reference : String
	{method}  {static} +builder () : com.frauas.exercisegenerator.documents.Image$ImageBuilder
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.Sheet {
	{field} +createdAt : java.time.LocalDateTime
	{field} +id : String
	{field} +isPublished : Boolean
	{field} +publishedAt : java.time.LocalDateTime
	{field} +showSolutions : Boolean
	{field} +title : String
	{field} +updatedAt : java.time.LocalDateTime
	{field} +useNumericTitles : Boolean
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.User {
	{field} +admin : boolean
	{field} +id : String
	{field} +password : String
	{field} +username : String
	{method}  {static} +builder () : com.frauas.exercisegenerator.documents.User$UserBuilder
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}




com.frauas.exercisegenerator.documents.Exercise "1" o-- "0..*"  com.frauas.exercisegenerator.documents.Category : categories
com.frauas.exercisegenerator.documents.Exercise "1" o-- "0..*"  com.frauas.exercisegenerator.documents.Course : courses
com.frauas.exercisegenerator.documents.Exercise "1" o-- "0..*"  com.frauas.exercisegenerator.documents.Image : images
com.frauas.exercisegenerator.documents.Exercise -->  com.frauas.exercisegenerator.documents.User : author
com.frauas.exercisegenerator.documents.Sheet "1" o-- "0..*"  com.frauas.exercisegenerator.documents.Category : categories
com.frauas.exercisegenerator.documents.Sheet "1" o-- "0..*"  com.frauas.exercisegenerator.documents.Course : courses
com.frauas.exercisegenerator.documents.Sheet "1" o-- "0..*"  com.frauas.exercisegenerator.documents.Exercise : exercises
com.frauas.exercisegenerator.documents.Sheet -->  com.frauas.exercisegenerator.documents.User : author


@enduml